# RePlan

./: .gitignore  LICENSE  README.md  ocr_false_positives.txt.example  pyproject.toml  requirements.txt  visualize_text_blocks.py  visualize_text_blocks_ai.py
.beads/: issues.jsonl
.beads/samples/: tests.txt
.cursor/rules/: beads-prioritization.mdc  beads-tracking.mdc  context-refresh.mdc  test-coverage.mdc
benchmarks/: __init__.py  run_benchmarks.py
docs/: AI_OCR_BACKENDS.md  PERFORMANCE_WARNINGS.md  PROGRESS.md
samples/: Daddy-O.pmw
src/: __init__.py
src/replan/: __init__.py
src/replan/desktop/: CACHE_SCENARIOS.md  __init__.py  __main__.py  app.py  config.py  test_planform_view.py
src/replan/desktop/core/: __init__.py  drawing.py  nesting.py  parametric.py  rendering.py  segmentation.py  undo.py  visualization_3d.py  websocket_collab.py
src/replan/desktop/dialogs/: __init__.py  attributes.py  base.py  category_selection.py  delete_object.py  label_scan.py  nesting.py  nesting_results.py  page_selection.py  pdf_loader.py  print_preview.py  rectangle_selection.py  settings.py  transform.py
src/replan/desktop/io/: __init__.py  cam_export.py  export.py  parts_library.py  pdf_reader.py  printing.py  vector_export.py  workspace.py
src/replan/desktop/models/: __init__.py  attributes.py  categories.py  elements.py  objects.py  page.py
src/replan/desktop/utils/: __init__.py  geometry.py  image.py  ocr.py  ocr_backends.py  ocr_config.py  profiling.py  textract_utils.py
src/replan/desktop/widgets/: __init__.py  collapsible.py  position_grid.py  responsive_layout.py
src/replan/findline/: README.md  __init__.py  trace_interactive.py  trace_with_points.py
src/replan/ipad/: FEATURE_COMPARISON.md  MIGRATION_PROGRESS.md  __init__.py  config.py  diagnostic.py  main.py  run.py
src/replan/ipad/core/: __init__.py  rendering.py  segmentation.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_drawing.py  test_nesting.py  test_parametric.py  test_rendering.py  test_segmentation.py
tests/integration/: __init__.py  test_performance.py  test_workflow.py
tests/io/: __init__.py  test_cam_export.py  test_parts_library.py  test_printing.py  test_vector_export.py
tests/models/: __init__.py  test_attributes.py  test_categories.py  test_delete_pixels.py  test_elements.py  test_objects.py  test_page.py  test_page_deletion.py  test_physical_size_preservation.py
(+21 files in other folders)
